# mech_interp

./: .gitignore  Makefile  README.md  pyproject.toml
playground/: gpt2_scope.ipynb  sae_playground.py
sae/: sae.py
src/sae/: sae.py
src/toy_model/: toy_model.py
src/transformer/: README.md  attention.py  config.py  embed.py  layer_norm.py  main.py  mlp.py  testing.ipynb  transformer_block.py
