[tool.poetry]
name = "mech_interp"
version = "0.1.0"
description = ""
authors = ["Shayan Sadeghieh <shayan.sadeghieh@gmail.com>"]
readme = "README.md"
packages = [
    { include = "sae", from = "src" },
    { include = "toy_model", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
einops = "^0.8.0"
jaxtyping = "^0.2.36"
tqdm = "^4.67.1"
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
